ChangeLog 'Dimemas package'

Structure

Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)

	FEATURES: 	explanation of new features

	BUGFIX:   	explanation of bug solved

	CHANGES:  	explanation of codification changes

2014/12/30 - jgonzale - GUI
	CHANGES:	Complete restructuration of GUI directory. Now, it includes
				a NetBeans project definition and it follows the classic code
				distribution of Java applications (es.bsc.cepbatools.dimemas 
				packages in the corresponding directories.

				In addition, the manifest file to create the 'jar' is created
				dynamically, and the build is more robust (avoid the fata 'sleep
				5' from previous implementation.

2014/12/30 - jgonzale - prv2dim
	BUGFIX:		Solved a bug when translating Paraver traces with MPI_Iprobe
				events and cluster events that caused a bad generation of the
				CPU bursts duration. Solved by changing the 'OutBlockComparison'
				not to preserve the original events sorting (the last revsion),
				but pushing the MPI_Iprobe related events (duration and number
				of probes) before the cluster events.

	BUGFIX:		Probably the trace useg to solved the previous problem (a
				Linpack execution in ARM from Nikola) was clustered using a 
				previous version of the clustering tool, because it generates an
				excess of clusters' burst closing events. The translator did
				not translate correctly these events, as it manages the cluster
				events to detect the old blocks. NOTE: This block management should 
				be changed (erased!).

2014/12/19 - jgonzale - prv2dim
	CHANGES:	Added support for 'cyclic simulations', i.e. simulations of
				Paraver traces that were previously simulated. So far, we
				use a fixed events (from 9 to 14, SHOULD BE CHANGED!) to indicate
				the different communication endpoints in the first translation 
				(original Paraver trace). Following translations will use this
				events to generate the endpoints, instead of regular communications.
			