@@ -1,4 +1,6 @@
-dist_noinst_DATA =  \
+RESOURCES =  \
 resources/bsc_logo.jpg \
 resources/dimemas_icon.png \
 resources/records_definition.txt
+
+dist_noinst_DATA= $(RESOURCES) DimemasGUI.in
