@@ -19,4 +19,4 @@ else
     exit 1
 fi
 
-$JAVA_BIN -DDIMEMAS_HOME=$DIMEMAS_HOME -jar $DIMEMAS_GUI_JAR >/dev/null
+$JAVA_BIN -DDIMEMAS_HOME=$DIMEMAS_HOME -jar $DIMEMAS_GUI_JAR $@ 
